--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange_theme">#F07B3F</color>
+    <color name="yellow_theme">#FFD460</color>
+    <color name="red_theme">#EA5455</color>
 </resources>
