add navigation bar

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,6 +129,7 @@
         android:fontFamily="@font/montserrat_semibold"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="goToMain"
         android:text="@string/guestText"
         android:textSize="14sp"
         app:cornerRadius="10dp"
