--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,12 +20,13 @@
         app:srcCompat="@drawable/d3dc7e93893bd4ad5d73009f763e4a48" />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/regUserPhoto"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="24dp"
         android:clickable="true"
         android:src="@drawable/_0_307416_profile_icon_png_image_free_download_searchpng_employee"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
@@ -55,7 +56,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+        app:layout_constraintTop_toBottomOf="@+id/regUserPhoto" />
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
@@ -173,13 +174,39 @@
         android:fontFamily="@font/montserrat_semibold"
         android:insetTop="0dp"
         android:insetBottom="0dp"
+        android:onClick="regClicked"
         android:text="Register"
         android:textSize="20sp"
         app:cornerRadius="10dp"
-        app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPW" />
+
+    <TextView
+        android:id="@+id/errorMessageText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text=""
+        android:textColor="@color/yellow_theme"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        tools:layout_editor_absoluteX="147dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="26dp"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/regUserPhoto" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
