register, login, profile page completed

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,6 +96,7 @@
         android:insetTop="0dp"
         android:insetBottom="0dp"
         android:text="Login"
+        android:onClick="logClicked"
         android:textSize="20sp"
         app:cornerRadius="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
