--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -6,19 +6,188 @@
     android:layout_height="match_parent"
     tools:context=".ExploreFragment">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="275dp"
-        android:layout_height="194dp"
-        android:layout_marginStart="88dp"
-        android:layout_marginTop="218dp"
-        android:layout_marginEnd="48dp"
-        android:layout_marginBottom="319dp"
-        android:text="ExploreTest"
-        android:textColor="@color/orange_theme"
-        android:textSize="34sp"
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="416dp"
+        android:layout_height="262dp"
+        android:scaleType="centerCrop"
+        android:layout_marginBottom="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/d3dc7e93893bd4ad5d73009f763e4a48" />
+
+    <TextView
+        android:id="@+id/textView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/montserrat_black"
+        android:gravity="center|center_horizontal"
+        android:text="Explore Events"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <SearchView
+        android:id="@+id/searchView"
+        android:layout_width="297dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/searchbar_bg"
+        android:backgroundTint="@color/cardview_light_background"
+        android:queryHint="Search Here"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView01">
+
+    </SearchView>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:fontFamily="@font/montserrat_black"
+        android:gravity="center|center_horizontal"
+        android:text="Start Date"
+        android:textColor="@color/yellow_theme"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/startDate"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.282"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
+        app:layout_constraintVertical_bias="0.92" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="120dp"
+        android:layout_height="48dp"
+        android:fontFamily="@font/montserrat_black"
+        android:gravity="center|center_horizontal"
+        android:text="End Date"
+        android:textColor="@color/yellow_theme"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/endDate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
+        app:layout_constraintVertical_bias="0.92" />
+
+    <EditText
+        android:id="@+id/startDate"
+        android:layout_width="187dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="12dp"
+        android:background="@color/yellow_theme"
+        android:ems="10"
+        android:hint="mm/dd/yyyy"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/endDate"
+        android:layout_width="187dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="12dp"
+        android:background="@color/yellow_theme"
+        android:ems="10"
+        android:hint="mm/dd/yyyy"
+        android:inputType="date"
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.142" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center|center_horizontal"
+        android:text="Search By Date"
+        android:layout_marginBottom="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/gridLayout01"
+        android:layout_width="314dp"
+        android:layout_height="69dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        app:columnCount="4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        app:rowCount="1">
+
+
+        <ImageView
+            android:id="@+id/image_music"
+            android:layout_width="64dp"
+            android:layout_height="69dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="2dp"
+            android:width="64dp"
+            android:height="64dp"
+            app:layout_column="0"
+            app:layout_row="0"
+            app:srcCompat="@drawable/icons8_classic_music_96" />
+
+        <ImageView
+            android:id="@+id/image_outdoor"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="2dp"
+            android:width="64dp"
+            android:height="64dp"
+            app:layout_column="1"
+            app:layout_row="0"
+            app:srcCompat="@drawable/icons8_outdoor_swimming_pool_96" />
+
+        <ImageView
+            android:id="@+id/image_food"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="2dp"
+            android:width="64dp"
+            android:height="64dp"
+            app:layout_column="2"
+            app:layout_row="0"
+            app:srcCompat="@drawable/icons8_pizza_96" />
+
+        <ImageView
+            android:id="@+id/image_art"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="2dp"
+            android:width="64dp"
+            android:height="64dp"
+            app:layout_column="3"
+            app:layout_row="0"
+            app:srcCompat="@drawable/icons8_picture_96" />
+
+    </androidx.gridlayout.widget.GridLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
