--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -79,7 +79,7 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="44dp"
                     android:fontFamily="@font/montserrat_bold"
-                    android:text="User Name"
+                    android:text="Loading"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     app:layout_constraintStart_toEndOf="@+id/userPhoto"
@@ -92,7 +92,7 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="6dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="useremail@gmail.com"
+                    android:text="loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toEndOf="@+id/userPhoto"
                     app:layout_constraintTop_toBottomOf="@+id/userName" />
@@ -104,7 +104,7 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="14dp"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="MM/DD/YYYY"
+                    android:text="loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toEndOf="@+id/userPhoto"
                     app:layout_constraintTop_toBottomOf="@+id/userEmail" />
@@ -140,7 +140,7 @@
                     android:layout_marginStart="28dp"
                     android:layout_marginTop="11dp"
                     android:fontFamily="@font/montserrat_black"
-                    android:text="Event Name"
+                    android:text="Loading"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +163,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="Orgnization"
+                    android:text="Loading"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/eventName" />
@@ -174,7 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:fontFamily="@font/montserrat_semibold"
-                    android:text="$COST"
+                    android:text="Loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/eventOrg" />
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="Location"
+                    android:text="Loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/eventCost" />
@@ -196,7 +196,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="MM/DD/YYYY-MM/DD/YYYY"
+                    android:text="Loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/eventLoc" />
@@ -207,7 +207,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="28dp"
                     android:fontFamily="@font/montserrat"
-                    android:text="HH:MM-HH:MM"
+                    android:text="Loading"
                     android:textColor="#939393"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/eventDate" />
@@ -226,6 +226,20 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/emptyListMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:text="Begin To Register \n Your First Event"
+                    android:textColor="@color/orange_theme"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <View
@@ -259,5 +273,15 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
