--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -10,10 +10,8 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="416dp"
-        android:layout_height="262dp"
+        android:layout_height="230dp"
         android:scaleType="centerCrop"
-        android:layout_marginBottom="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +21,7 @@
         android:id="@+id/textView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="68dp"
         android:fontFamily="@font/montserrat_black"
         android:gravity="center|center_horizontal"
         android:text="Explore Events"
@@ -36,10 +34,9 @@
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="297dp"
-        android:layout_height="66dp"
-        android:layout_marginTop="40dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/searchbar_bg"
-        android:backgroundTint="@color/cardview_light_background"
         android:queryHint="Search Here"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,144 +47,175 @@
     <TextView
         android:id="@+id/textView2"
         android:layout_width="120dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
         android:fontFamily="@font/montserrat_black"
-        android:gravity="center|center_horizontal"
-        android:text="Start Date"
-        android:textColor="@color/yellow_theme"
+        android:text="From"
+        android:textColor="@color/orange_theme"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/startDate"
-        app:layout_constraintEnd_toStartOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.282"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
-        app:layout_constraintVertical_bias="0.92" />
+        app:layout_constraintStart_toStartOf="@+id/textView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="45dp"
+        android:fontFamily="@font/montserrat_black"
+        android:text="Event Date"
+        android:textColor="@color/orange_theme"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="120dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat_black"
-        android:gravity="center|center_horizontal"
-        android:text="End Date"
-        android:textColor="@color/yellow_theme"
+        android:text="To"
+        android:textColor="@color/orange_theme"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/endDate"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.866"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
-        app:layout_constraintVertical_bias="0.92" />
+        app:layout_constraintStart_toStartOf="@+id/endDate"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/startDate"
-        android:layout_width="187dp"
+        android:layout_width="150dp"
         android:layout_height="43dp"
-        android:layout_marginBottom="12dp"
-        android:background="@color/yellow_theme"
+        android:background="@drawable/edit_text_rounded"
         android:ems="10"
         android:hint="mm/dd/yyyy"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:paddingStart="12dp"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
         android:id="@+id/endDate"
-        android:layout_width="187dp"
+        android:layout_width="150dp"
         android:layout_height="43dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="12dp"
-        android:background="@color/yellow_theme"
+        android:background="@drawable/edit_text_rounded"
         android:ems="10"
         android:hint="mm/dd/yyyy"
         android:inputType="date"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.142" />
+        android:paddingStart="12dp"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center|center_horizontal"
+        android:layout_width="330dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="37dp"
+        android:fontFamily="@font/montserrat_semibold"
+        android:insetTop="0dp"
+        android:insetBottom="0dp"
         android:text="Search By Date"
-        android:layout_marginBottom="90dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="20sp"
+        app:cornerRadius="10dp"
+        app:layout_constraintHorizontal_bias="0.493"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startDate" />
 
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/gridLayout01"
-        android:layout_width="314dp"
-        android:layout_height="69dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="50dp"
-        app:columnCount="4"
+    <ImageView
+        android:id="@+id/image_music"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="27dp"
+        android:width="64dp"
+        android:height="64dp"
+        android:scaleType="fitCenter"
+        app:layout_column="0"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/image_art"
+        app:srcCompat="@drawable/icons8_classic_music_96" />
+
+    <ImageView
+        android:id="@+id/image_outdoor"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="32dp"
+        android:width="64dp"
+        android:height="64dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/image_music"
+        app:layout_constraintTop_toTopOf="@+id/image_art"
+        app:srcCompat="@drawable/icons8_outdoor_swimming_pool_96" />
+
+    <ImageView
+        android:id="@+id/image_food"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginEnd="32dp"
+        android:width="64dp"
+        android:height="64dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/image_outdoor"
+        app:layout_constraintTop_toTopOf="@+id/image_art"
+        app:srcCompat="@drawable/icons8_pizza_96" />
+
+    <ImageView
+        android:id="@+id/image_art"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="32dp"
+        android:width="64dp"
+        android:height="64dp"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toStartOf="@+id/image_food"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView"
-        app:rowCount="1">
+        app:srcCompat="@drawable/icons8_picture_96" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text="Arts"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/image_art"
+        app:layout_constraintTop_toBottomOf="@+id/image_art" />
 
-        <ImageView
-            android:id="@+id/image_music"
-            android:layout_width="64dp"
-            android:layout_height="69dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="2dp"
-            android:width="64dp"
-            android:height="64dp"
-            app:layout_column="0"
-            app:layout_row="0"
-            app:srcCompat="@drawable/icons8_classic_music_96" />
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text="Food"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/image_food"
+        app:layout_constraintTop_toBottomOf="@+id/image_food" />
 
-        <ImageView
-            android:id="@+id/image_outdoor"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="2dp"
-            android:width="64dp"
-            android:height="64dp"
-            app:layout_column="1"
-            app:layout_row="0"
-            app:srcCompat="@drawable/icons8_outdoor_swimming_pool_96" />
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text="Outdoor"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/image_outdoor"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
-        <ImageView
-            android:id="@+id/image_food"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="2dp"
-            android:width="64dp"
-            android:height="64dp"
-            app:layout_column="2"
-            app:layout_row="0"
-            app:srcCompat="@drawable/icons8_pizza_96" />
-
-        <ImageView
-            android:id="@+id/image_art"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="2dp"
-            android:width="64dp"
-            android:height="64dp"
-            app:layout_column="3"
-            app:layout_row="0"
-            app:srcCompat="@drawable/icons8_picture_96" />
-
-    </androidx.gridlayout.widget.GridLayout>
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="64dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_medium"
+        android:gravity="center"
+        android:text="Music"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@+id/image_music"
+        app:layout_constraintTop_toTopOf="@+id/textView6" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
