modify layout, add user event list

--- a/app/src/main/res/layout/activity_event_register.xml
+++ b/app/src/main/res/layout/activity_event_register.xml
@@ -5,7 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+    <ImageView
+        android:id="@+id/backButton"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:translationZ="12dp"
+        app:srcCompat="@drawable/ic_chevron_left_solid"
+        android:clickable="true"
+        app:tint="@color/white" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
