--- a/app/src/main/res/layout/adapter_row.xml
+++ b/app/src/main/res/layout/adapter_row.xml
@@ -9,12 +9,13 @@
         android:id="@+id/cardView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="1dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="411dp"
@@ -25,6 +26,7 @@
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_marginStart="20dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -71,6 +73,7 @@
                 android:autoSizeMinTextSize="7sp"
                 android:autoSizeStepGranularity="2sp"
                 android:autoSizeTextType="uniform"
+
                 android:fontFamily="@font/montserrat_medium"
                 android:maxLines="2"
                 android:text="Location"
@@ -87,6 +90,7 @@
                 android:fontFamily="@font/montserrat_medium"
                 android:gravity="left"
                 android:text="Cost"
+
                 android:textSize="15sp"
                 app:layout_constraintBottom_toTopOf="@+id/eventLocation"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,6 +104,7 @@
                 android:text="Date"
                 android:textSize="15sp"
                 android:gravity="left"
+
                 android:layout_marginStart="5dp"
                 app:layout_constraintBottom_toTopOf="@+id/eventTime"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -115,6 +120,7 @@
                 android:layout_marginBottom="15dp"
                 android:textSize="15sp"
                 android:gravity="left"
+
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
