--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -118,7 +118,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/eventView"
                 android:layout_width="match_parent"
-                android:layout_height="260dp">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/textView5"
@@ -220,15 +220,15 @@
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
+                    android:layout_marginTop="22dp"
                     android:fontFamily="@font/montserrat_medium"
                     android:insetTop="0dp"
                     android:insetBottom="0dp"
                     android:text="Show All Registered Events"
                     android:textColor="@color/orange_theme"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/eventTime" />
 
                 <TextView
                     android:id="@+id/emptyListMessage"
