--- a/app/src/main/res/layout/bottomsheet_layout.xml
+++ b/app/src/main/res/layout/bottomsheet_layout.xml
@@ -11,16 +11,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <Button
                 android:id="@+id/back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="29dp"
                 android:layout_marginBottom="8dp"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
                 android:text="@string/backicon"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:icon="@drawable/ic_chevron_left_solid"
+                app:iconPadding="0dp"
+                app:iconSize="40dp"
+                app:iconTint="@color/orange_theme"
                 app:layout_constraintBottom_toTopOf="@+id/recyclerView"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -31,137 +39,129 @@
                     android:id="@+id/currentcardView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="1dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="1dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="411dp"
-                        android:layout_height="230dp"
+                        android:layout_height="wrap_content"
                         android:id="@+id/currentevent">
 
                         <ImageView
                             android:id="@+id/currenteventImage"
-                            android:layout_width="150dp"
-                            android:layout_height="230dp"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_marginStart="20dp"
+                            android:scaleType="centerCrop"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintHorizontal_bias="0.0"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0"
                             tools:srcCompat="@tools:sample/avatars" />
 
                         <TextView
                             android:id="@+id/currenteventName"
                             android:layout_width="200dp"
-                            android:layout_height="30dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:layout_marginBottom="10dp"
-                            android:layout_marginTop="10dp"
-                            android:fontFamily="@font/montserrat_black"
-                            android:text="Title"
-                            android:textSize="18sp"
+                            android:layout_marginTop="15dp"
+                            android:fontFamily="@font/montserrat_bold"
                             android:gravity="left"
-                            app:layout_constraintBottom_toTopOf="@+id/currenteventLocation"
+                            android:maxLines="2"
+                            android:text="Title"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintVertical_bias="0.0" />
+                            app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
                             android:id="@+id/currenteventLocation"
                             android:layout_width="200dp"
-                            android:layout_height="30dp"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:layout_marginBottom="10dp"
-                            android:fontFamily="@font/montserrat_black"
-                            android:text="Location: "
-                            android:textSize="12sp"
-                            android:gravity="left"
-                            app:layout_constraintBottom_toTopOf="@+id/currenteventTime"
+                            android:autoSizeMaxTextSize="15sp"
+                            android:autoSizeMinTextSize="7sp"
+                            android:autoSizeStepGranularity="2sp"
+                            android:autoSizeTextType="uniform"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:maxLines="2"
+                            android:text="Location"
+                            android:textSize="15sp"
+                            app:layout_constraintTop_toBottomOf="@id/currenteventCost"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
 
                         <TextView
                             android:id="@+id/currenteventDate"
                             android:layout_width="200dp"
-                            android:layout_height="25dp"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginBottom="10dp"
-                            android:fontFamily="@font/montserrat_black"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/montserrat_medium"
                             android:text="Date"
                             android:textSize="15sp"
-                            android:autoSizeMaxTextSize="15sp"
-                            android:autoSizeMinTextSize="7sp"
-                            android:autoSizeStepGranularity="2sp"
-                            android:autoSizeTextType="uniform"
-                            app:layout_constraintBottom_toTopOf="@+id/currenteventCost"
+                            android:gravity="left"
+                            android:layout_marginStart="5dp"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/currentdistance"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
 
                         <TextView
                             android:id="@+id/currenteventTime"
                             android:layout_width="200dp"
                             android:layout_height="25dp"
-                            android:fontFamily="@font/montserrat_black"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginBottom="15dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:gravity="left"
                             android:text="Time"
                             android:textSize="15sp"
-                            android:gravity="left"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginBottom="10dp"
-                            app:layout_constraintBottom_toTopOf="@+id/currenteventDate"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
+                            app:layout_constraintStart_toEndOf="@+id/currenteventImage"
+                            app:layout_constraintTop_toBottomOf="@id/currenteventDate"
+                            app:layout_constraintBottom_toBottomOf="parent" />
 
                         <TextView
                             android:id="@+id/currenteventCost"
                             android:layout_width="200dp"
-                            android:layout_height="25dp"
-                            android:fontFamily="@font/montserrat_black"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:fontFamily="@font/montserrat_medium"
+                            android:gravity="left"
                             android:text="Cost"
                             android:textSize="15sp"
-                            android:gravity="left"
-                            android:layout_marginStart="5dp"
-                            android:layout_marginBottom="10dp"
-                            app:layout_constraintBottom_toTopOf="@+id/currentsponceringOrganization"
+                            app:layout_constraintTop_toBottomOf="@id/currentsponceringOrganization"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
 
                         <TextView
                             android:id="@+id/currentsponceringOrganization"
                             android:layout_width="200dp"
-                            android:layout_height="25dp"
-                            android:fontFamily="@font/montserrat_black"
-                            android:text="Sponsoring Organization"
+                            android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
-                            android:layout_marginBottom="15dp"
-                            android:textSize="15sp"
+                            android:fontFamily="@font/montserrat_semibold"
                             android:gravity="left"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:text="Orgnization"
+                            android:textColor="@color/black"
+                            android:textSize="15sp"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toBottomOf="@id/currenteventName"
                             app:layout_constraintStart_toEndOf="@+id/currenteventImage" />
                         <TextView
                             android:id="@+id/currentdistance"
-                            android:layout_width="104dp"
-                            android:layout_height="21dp"
-                            android:layout_marginStart="35dp"
-                            android:layout_marginTop="193dp"
-                            android:layout_marginEnd="272dp"
-                            android:layout_marginBottom="16dp"
-                            android:fontFamily="@font/montserrat_black"
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:fontFamily="@font/montserrat_medium"
                             android:gravity="left"
                             android:text="distance"
                             android:textSize="15sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="@+id/currenteventImage"
-                            app:layout_constraintTop_toTopOf="@+id/currenteventImage"
-                            app:layout_constraintVertical_bias="1.0" />
+                            app:layout_constraintStart_toEndOf="@+id/currenteventImage"
+                            app:layout_constraintTop_toBottomOf="@id/currenteventLocation" />
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.cardview.widget.CardView>
             </androidx.constraintlayout.widget.ConstraintLayout>
