--- a/app/src/main/res/layout/activity_event_register.xml
+++ b/app/src/main/res/layout/activity_event_register.xml
@@ -48,7 +48,7 @@
 
                 <ImageView
                     android:id="@+id/eventPhoto"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="240dp"
                     android:minHeight="100dp"
                     android:scaleType="centerCrop"
