--- a/app/src/main/res/layout/adapter_row.xml
+++ b/app/src/main/res/layout/adapter_row.xml
@@ -44,11 +44,9 @@
                 android:text="Title"
                 android:textColor="@color/black"
                 android:textSize="18sp"
-                app:layout_constraintBottom_toTopOf="@+id/sponceringOrganization"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/sponceringOrganization"
@@ -56,12 +54,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/montserrat_semibold"
-                android:textColor="@color/black"
                 android:gravity="left"
                 android:text="Orgnization"
+                android:textColor="@color/black"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toTopOf="@+id/eventCost"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/eventName"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
 
             <TextView
@@ -77,21 +75,35 @@
                 android:maxLines="2"
                 android:text="Location"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toTopOf="@+id/eventDate"
+                app:layout_constraintTop_toBottomOf="@id/eventCost"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
+
+            <TextView
+                android:id="@+id/distance"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/montserrat_medium"
+                android:gravity="left"
+                android:text="distance"
+                android:textSize="15sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/eventImage"
+                app:layout_constraintTop_toBottomOf="@id/eventLocation" />
 
             <TextView
                 android:id="@+id/eventCost"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
+
                 android:fontFamily="@font/montserrat_medium"
                 android:gravity="left"
-                android:text="Cost"
 
+                android:text="Cost"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toTopOf="@+id/eventLocation"
+                app:layout_constraintTop_toBottomOf="@id/sponceringOrganization"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
 
@@ -103,44 +115,26 @@
                 android:text="Date"
                 android:textSize="15sp"
                 android:gravity="left"
-
                 android:layout_marginStart="5dp"
-                app:layout_constraintBottom_toTopOf="@+id/eventTime"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/distance"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
 
             <TextView
                 android:id="@+id/eventTime"
                 android:layout_width="200dp"
                 android:layout_height="25dp"
-                android:fontFamily="@font/montserrat_medium"
-                android:text="Time"
                 android:layout_marginStart="5dp"
                 android:layout_marginBottom="15dp"
-                android:textSize="15sp"
+                android:fontFamily="@font/montserrat_medium"
                 android:gravity="left"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/eventImage" />
-
-            <TextView
-                android:id="@+id/distance"
-                android:layout_width="104dp"
-                android:layout_height="21dp"
-                android:layout_marginStart="35dp"
-                android:layout_marginTop="193dp"
-                android:layout_marginEnd="272dp"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/montserrat_black"
-                android:gravity="left"
-                android:text="distance"
+                android:text="Time"
                 android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/eventImage"
-                app:layout_constraintTop_toTopOf="@+id/eventImage"
-                app:layout_constraintVertical_bias="1.0" />
+                app:layout_constraintStart_toEndOf="@+id/eventImage"
+                app:layout_constraintTop_toBottomOf="@id/eventDate"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
