--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -42,6 +42,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
+        android:id = "@+id/userScrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/app_name"
