--- a/app/src/main/res/layout/adapter_row.xml
+++ b/app/src/main/res/layout/adapter_row.xml
@@ -75,7 +75,7 @@
                 android:maxLines="2"
                 android:text="Location"
                 android:textSize="15sp"
-                app:layout_constraintTop_toBottomOf="@id/eventCost"
+                app:layout_constraintTop_toBottomOf="@id/eventRating"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
 
@@ -97,15 +97,27 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-
                 android:fontFamily="@font/montserrat_medium"
                 android:gravity="left"
-
                 android:text="Cost"
                 android:textSize="15sp"
                 app:layout_constraintTop_toBottomOf="@id/sponceringOrganization"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/eventImage" />
+
+            <TextView
+                android:id="@+id/eventRating"
+                android:layout_width="200dp"
+                android:layout_height="22dp"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="left"
+                android:text="@string/star"
+                android:textColor="@color/orange_theme"
+                android:textSize="17sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/eventImage"
+                app:layout_constraintTop_toBottomOf="@+id/eventCost" />
 
             <TextView
                 android:id="@+id/eventDate"
